--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,2 @@
 Header always set X-Content-Type-Options "nosniff"
-Header always set Cache-Control: no-store
+Header always set Cache-Control "no-store"
